
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef void* user64_addr_t ;
typedef scalar_t__ int32_t ;
struct TYPE_3__ {int num_devices; void* devices; int member_0; } ;
typedef TYPE_1__ fsevent_dev_filter_args64 ;


 int EXIT_FAILURE ;
 int FSEVENTS_DEVICE_FILTER_64 ;
 int exit (int ) ;
 int ioctl (int,int ,TYPE_1__*) ;
 int perror (char*) ;
 int printf (char*) ;

void* racer(void* thread_arg){
  int fd = *(int*)thread_arg;
  printf("started thread\n");

  fsevent_dev_filter_args64 arg = {0};
  int32_t dev = 0;

  while (1) {
    arg.num_devices = 1;
    arg.devices = (user64_addr_t)&dev;
    int err = ioctl(fd, FSEVENTS_DEVICE_FILTER_64, &arg);

    if (err == -1) {
      perror("error in FSEVENTS_DEVICE_FILTER_64\n");
      exit(EXIT_FAILURE);
    }

    arg.num_devices = 0;
    arg.devices = (user64_addr_t)&dev;

    err = ioctl(fd, FSEVENTS_DEVICE_FILTER_64, &arg);

    if (err == -1) {
      perror("error in FSEVENTS_DEVICE_FILTER_64\n");
      exit(EXIT_FAILURE);
    }
  }

  return ((void*)0);
}
